Add a plugin to import the Micronaut Platform catalog (#694)
* Add support for overriding some Micronaut module versions

This commit adds the ability to override the version of some
dependencies which are automatically added by the Gradle plugin.
For example, a `micronautCoreVersion` property in gradle.properties
file will override the default micronaut core version.

There are 2 places where the version can be overriden. Either via
the DSL, under the `micronaut` extension, e.g:

```
micronaut {
   dataVersion.set("...")
}
```

or via `gradle.properties` in which case the version is prefixed with
`micronaut`, e.g `micronautDataVersion`.

The modules for which we added version overrides are all
modules which have automatic dependencies:

  - core
  - aws
  - azure
  - data
  - gcp
  - http_netty
  - jaxrs
  - oraclecloud
  - security
  - servlet
  - validation

Note that because of https://github.com/gradle/gradle/issues/24719,
the DSL doesn't let us use the `=` operator, so one has to write
`.set("...")`. This problem is not present with the experimental
Kotlin DSL assignment operator in Gradle 8.1.

Closes #689

* Add a plugin to automatically apply the Micronaut Platform catalog

This commit introduces a new _settings_ plugin, which automatically
imports the Micronaut Platform version catalog, so that the user
can declare dependencies using the `mn.xxx` notation.

This plugin needs to be applied to `settings.gradle(.kts)` file and
will determine the version of Micronaut to use either by reading
the `gradle.properties` file, in which case it will look for a couple
possible properties : `micronaut` and `micronaut.platform`, or by
reading the `micronaut` version from the user's default version
catalog.

Applying this plugin offers a new way to override the default
versions, since it is now possible to override _any_ version from
the catalog directly: unlike what is implemented in #690, it is
not limited to a k